--- a/asr_inferens.ipynb
+++ b/asr_inferens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cf15ca02",
+   "id": "76351f4b",
    "metadata": {},
    "source": [
     "# Распознавние речи  до обученной на датасете от Сбер-голоса базовой модели Whisper ."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "38fad83c",
+   "id": "76875f75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6abf9048",
+   "execution_count": 2,
+   "id": "2f8c8b3a",
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "50a95358",
+   "execution_count": 3,
+   "id": "9f938773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ab9fe6",
+   "id": "a8e4a929",
    "metadata": {},
    "source": [
     "Имя файла аудио для распознавания"
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9281bf23",
+   "execution_count": 4,
+   "id": "31a10ab1",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45fd3d22",
+   "id": "e1e71206",
    "metadata": {},
    "source": [
     "Вычисляем мел спектрограмму"
@@ -115,8 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "20c105de",
+   "execution_count": 5,
+   "id": "038d1a71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29810fda",
+   "id": "c0c380f2",
    "metadata": {},
    "source": [
     "Распознаем аудио базавой моделью от Whisper"
@@ -135,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f2b9e277",
+   "execution_count": 6,
+   "id": "7e9c1f32",
    "metadata": {},
    "outputs": [
     {
@@ -154,16 +154,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bd2dec",
+   "id": "0f689b65",
    "metadata": {},
    "source": [
-    "Загружаем веса до обученной модели"
+    "Загружаем веса до обученной модели  из https://disk.yandex.ru/d/ogeKhA-PfNpf9w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d93a19e3",
+   "execution_count": 7,
+   "id": "afc3410a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os.path\n",
+    "if not os.path.isfile('base_ru.pt'):\n",
+    "    import requests\n",
+    "    from urllib.parse import urlencode\n",
+    "\n",
+    "    base_url = 'https://cloud-api.yandex.net/v1/disk/public/resources/download?'\n",
+    "    public_key = 'https://disk.yandex.ru/d/ogeKhA-PfNpf9w'  # Сюда вписываете вашу ссылку\n",
+    "\n",
+    "    # Получаем загрузочную ссылку\n",
+    "    final_url = base_url + urlencode(dict(public_key=public_key))\n",
+    "    response = requests.get(final_url)\n",
+    "    download_url = response.json()['href']\n",
+    "\n",
+    "    # Загружаем файл и сохраняем его\n",
+    "    download_response = requests.get(download_url)\n",
+    "    with open('base_ru.pt', 'wb') as f:   # Здесь укажите нужный путь к файлу\n",
+    "        f.write(download_response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a07c06ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f220326b",
+   "id": "868ef545",
    "metadata": {},
    "source": [
     "Распознаем речь до обученной моделью"
@@ -182,8 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2c843b8f",
+   "execution_count": 9,
+   "id": "e68d3535",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1ed20de",
+   "id": "dd3d3502",
    "metadata": {},
    "outputs": [],
    "source": []
